--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </head>
 
 <body>
-
+<div class="logo-name">
+    <h1>Skydance Hot Air Balloon Rides</h1>
+    <h3>Ride with the wind. Dance with the sky.</h3>
+</div>
 </body>
 
 </html>
