brings in a phone glyphicon for the contact section

--- a/index.html
+++ b/index.html
@@ -35,13 +35,24 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Info</a></li>
+      <li><a href="#">Gallery</a></li>
+      <li><a href="#">Testimonial</a></li>
+      <li><a href = "#">Contact Info </a></li>
     </ul>
   </div>
 </nav>
->>>>>>> c9d61f12c4f1f9c68d0ecc67fbab10c8d92f709c
+<div id = "contact info" class = "container">
+<p>Contact: We’d love to hear from you</p><br>
+<p>Address
+SHABR, Inc.
+1234 Shabr Road
+Somewhere, OT 80013</p><br>
+<p><span class = "glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
+
+Copyright © 2016   |   SHABR
+    
+</div>
 </body>
 
 </html>
