--- a/index.html
+++ b/index.html
@@ -20,9 +20,30 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <script src="script.js"></script>
     <style>
+    @media screen and (max-width:600px) {
+        body {
+            font-size:12px;
+        }
+        
+    }
+    @media screen and (min-width:768px) {
+        body {
+            font-size:16px;
+        }
+    }
+    @media screen and (min-width:992px){
+        body {
+            font-size:20px;
+        }
+    }
+    @media screen and (min-width:1200px){
+        body {
+            font-size:30px;
+        }
+    }
         #pageopen {
             color: rgba(0, 0, 150, 40);
-            background: url("balloon-1.jpg") no-repeat;
+            background: src("img/ballonon-1.jpg") no-repeat;
             font-family: 'Righteous', cursive;
         }
     </style>
@@ -73,15 +94,15 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xs-6">
-                    <div id="gallery">
-                        <h2>Gallery</h2>
-                        <img src="/bootstrap/shabr/img/balloon-1.jpg" alt="view"></img>
-                        <img src="/bootstrap/shabr/img/balloon-2.jpg" alt="fire ballon"></img>
-                        <img src="/bootstrap/shabr/img/balloon-3.jpg" alt="purple balloon"></img>
-                        <img src="/bootstrap/shabr/img/balloon-4.jpg" alt="closeup"></img>
-                        <img src="/bootstrap/shabr/img/balloon-5.jpg" alt="shadow"></img>
-                        <img src="/bootstrap/shabr/img/balloon-6.jpg" alt="firing up"></img>
+                <div id="gallery">
+                    <h2>Gallery</h2>
+                    <div class="col-xs-6">
+                        <img src="img/balloon-1.jpg" alt="view" class="img-responsive"></img>
+                        <img src="img/balloon-2.jpg" alt="fire ballon" class="img-responsive"></img>
+                        <img src="img/balloon-3.jpg" alt="purple balloon" class="img-responsive"></img>
+                        <img src="img/balloon-4.jpg" alt="closeup" class="img-responsive"></img>
+                        <img src="img/balloon-5.jpg" alt="shadow" class="img-responsive"></img>
+                        <img src="img/balloon-6.jpg" alt="firing up" class="img-responsive"></img>
                     </div>
                 </div>
             </div>
