--- a/index.html
+++ b/index.html
@@ -20,27 +20,31 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <script src="script.js"></script>
     <style>
-    @media screen and (max-width:600px) {
-        body {
-            font-size:12px;
+        @media screen and (max-width:600px) {
+            body {
+                font-size: 12px;
+            }
+
         }
-        
-    }
-    @media screen and (min-width:768px) {
-        body {
-            font-size:16px;
+
+        @media screen and (min-width:768px) {
+            body {
+                font-size: 16px;
+            }
         }
-    }
-    @media screen and (min-width:992px){
-        body {
-            font-size:20px;
+
+        @media screen and (min-width:992px) {
+            body {
+                font-size: 20px;
+            }
         }
-    }
-    @media screen and (min-width:1200px){
-        body {
-            font-size:30px;
+
+        @media screen and (min-width:1200px) {
+            body {
+                font-size: 30px;
+            }
         }
-    }
+
         #pageopen {
             color: rgba(0, 0, 150, 40);
             background: src("img/ballonon-1.jpg") no-repeat;
@@ -79,18 +83,20 @@
             <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
         </div>
-        <div id="info">
-            <h2>Info: All the information you'll need</h2>
-            <h4>Time</h4>
-            <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead
-                for the exact meeting time.</p>
-            <h4>Weather</h4>
-            <p>High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will allow
-                their balloon flight.</p>
-            <h4>Flight</h4>
-            <p>Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
-            <h4>Participation</h4>
-            <p>We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
+        <div class="container">
+            <div id="info" class="jumbotron">
+                <h2>Info: All the information you'll need</h2>
+                <h4>Time</h4>
+                <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call
+                    ahead for the exact meeting time.</p>
+                <h4>Weather</h4>
+                <p>High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will
+                    allow their balloon flight.</p>
+                <h4>Flight</h4>
+                <p>Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
+                <h4>Participation</h4>
+                <p>We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
+            </div>
         </div>
         <div class="container">
             <div class="row">
