--- a/index.html
+++ b/index.html
@@ -113,17 +113,18 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div id="Testimonials">
+                <h2>Testimonials: Just a few of our happy customers</h2>
+                <blockquote>
+                <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p></blockquote>
+                <blockquote><p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p></blockquote>
+                <blockquote><p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p></blockquote>
+                <blockquote><p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p></blockquote>
+                <blockquote><p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p></blockquote>
+                <blockquote><p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p></blockquote>
 
-        <div id="Testimonials">
-            <h2>Testimonials: Just a few of our happy customers</h2>
-            <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
-            <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
-            <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
-            <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
-            <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
-            <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
-
-
+            </div>
         </div>
         <div id="contact info" class="container">
             <h2>Contact: We’d love to hear from you</h2><br>
