--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <script src="script.js"></script>
     <style>
+    #progress{
+        position:fixed;
+        height:40px;
+        overflow:scroll;
+    }
         @media screen and (max-width:600px) {
             body {
                 font-size: 12px;
@@ -58,95 +63,100 @@
         <h1>Skydance Hot Air Balloon Rides</h1>
         <h3>Ride with the wind. Dance with the sky.</h3>
     </div>
-
-    <div class='container'>
-        <ul class="pager">
-            <li><a href="#contact info">Click here to see our contact info immediately</a></li>
-        </ul>
-
-    </div>
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Up, up and away...</a>
+    <div class="container">
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" id = "progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:40%">10%
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#info">Info</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#Testimonials">Testimonial</a></li>
-            </ul>
         </div>
-    </nav>
-    <div id=#home>
-        <h2>Home: Fun for Everyone</h2>
-        <p>Come make a new memory with us. There's nothing else like it.</p>
-        <p>Fun for both adults and kids. All are welcome!</p>
-        <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
-    </div>
-    <div class="container">
-        <div id="info" class="jumbotron">
-            <h2>Info: All the information you'll need</h2>
-            <h4>Time</h4>
-            <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead
-                for the exact meeting time.</p>
-            <h4>Weather</h4>
-            <p>High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will allow
-                their balloon flight.</p>
-            <h4>Flight</h4>
-            <p>Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
-            <h4>Participation</h4>
-            <p>We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
+        <div class='container'>
+            <ul class="pager">
+                <li><a href="#contact info">Click here to see our contact info immediately</a></li>
+            </ul>
+
         </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div id="gallery">
-                <h2>Gallery</h2>
-                <div class="col-xs-6">
-                    <img src="img/balloon-1.jpg" alt="view" class="img-responsive"></img>
-                    <img src="img/balloon-2.jpg" alt="fire ballon" class="img-responsive"></img>
-                    <img src="img/balloon-3.jpg" alt="purple balloon" class="img-responsive"></img>
-                    <img src="img/balloon-4.jpg" alt="closeup" class="img-responsive"></img>
-                    <img src="img/balloon-5.jpg" alt="shadow" class="img-responsive"></img>
-                    <img src="img/balloon-6.jpg" alt="firing up" class="img-responsive"></img>
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Up, up and away...</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#info">Info</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#Testimonials">Testimonial</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div id=#home>
+            <h2>Home: Fun for Everyone</h2>
+            <p>Come make a new memory with us. There's nothing else like it.</p>
+            <p>Fun for both adults and kids. All are welcome!</p>
+            <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
+
+        </div>
+        <div class="container">
+            <div id="info" class="jumbotron">
+                <h2>Info: All the information you'll need</h2>
+                <h4>Time</h4>
+                <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call
+                    ahead for the exact meeting time.</p>
+                <h4>Weather</h4>
+                <p>High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will
+                    allow their balloon flight.</p>
+                <h4>Flight</h4>
+                <p>Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
+                <h4>Participation</h4>
+                <p>We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div id="gallery">
+                    <h2>Gallery</h2>
+                    <div class="col-xs-6">
+                        <img src="img/balloon-1.jpg" alt="view" class="img-responsive"></img>
+                        <img src="img/balloon-2.jpg" alt="fire ballon" class="img-responsive"></img>
+                        <img src="img/balloon-3.jpg" alt="purple balloon" class="img-responsive"></img>
+                        <img src="img/balloon-4.jpg" alt="closeup" class="img-responsive"></img>
+                        <img src="img/balloon-5.jpg" alt="shadow" class="img-responsive"></img>
+                        <img src="img/balloon-6.jpg" alt="firing up" class="img-responsive"></img>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div id="Testimonials">
-            <h2>Testimonials: Just a few of our happy customers</h2>
-            <blockquote>
-                <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
-            </blockquote>
-            <blockquote>
-                <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
-            </blockquote>
-            <blockquote>
-                <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
-            </blockquote>
-            <blockquote>
-                <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
-            </blockquote>
-            <blockquote>
-                <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
-            </blockquote>
-            <blockquote>
-                <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
-            </blockquote>
+        <div class="container">
+            <div id="Testimonials">
+                <h2>Testimonials: Just a few of our happy customers</h2>
+                <blockquote>
+                    <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
+                </blockquote>
+                <blockquote>
+                    <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
+                </blockquote>
+                <blockquote>
+                    <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
+                </blockquote>
+                <blockquote>
+                    <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
+                </blockquote>
+                <blockquote>
+                    <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
+                </blockquote>
+                <blockquote>
+                    <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
+                </blockquote>
+
+            </div>
+        </div>
+        <div id="contact info" class="container">
+            <h2>Contact: We’d love to hear from you</h2><br>
+            <p>Address SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
+            <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
+                <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
 
         </div>
-    </div>
-    <div id="contact info" class="container">
-        <h2>Contact: We’d love to hear from you</h2><br>
-        <p>Address SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
-        <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
-            <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
-
-    </div>
 </body>
 
 </html>
