--- a/index.html
+++ b/index.html
@@ -333,6 +333,33 @@
       </div>
 
 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="balloon-1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="balloon-2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="balloon-3.jpg" alt="Third slide">
+    </div>
+  </div>
+      <div class="carousel-item">
+      <img class="d-block w-100" src="balloon-4.jpg" alt="Second slide">
+    </div>
+        <div class="carousel-item">
+      <img class="d-block w-100" src="balloon-5.jpg" alt="Second slide">
+    </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 
 </body>
@@ -342,14 +369,15 @@
     
     <!-- Bootstrap CSS Used: 
     
-    1.navbar(Lets try making it stay at the top throughout for it to be easier for the viewer)
+    1.navbar(Lets try making it stay at the top throughout for it to be easier for the viewer)(Lets try making it stay at the top throughout for it to be easier for the viewer)
     2.carousel(still working on making the image appear after clicking each data-target)
     3.glyphicon
     4.jumbotron
     5.image
     6.panels
-    7. Grids
-    8. Media Queries
+    7.Grids
+    8.Progress bar
+    9.Media Queries
     -->
 
 
