--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
         </div>
       </div>
 
-      <div class="container">
-
-        <div id="gallery">
+      <div  id="gallery">
           <h2>Gallery</h2>
           <div class="container">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            
+            <div id="gallery" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -138,7 +137,7 @@
               </div>
 
             </div>
-            <div class="container">
+            <div class="test">
               <div id="Testimonials">
                 <h2>Testimonials: Just a few of our happy customers</h2>
                 <blockquote>
@@ -161,12 +160,15 @@
                 </blockquote>
 
               </div>
+              <br> 
             </div>
 
             <div id="contact info" class="container">
-              <h2>Contact: We’d love to hear from you</h2><br>
-              <p>Address: SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
-              <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
+              <h2>Contact:
+              <p>We’d love to hear from you</p>
+              <h2>Address:<p> 
+              SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p>
+              <h2><span class="glyphicon glyphicon-earphone">Phone: <h2>(555) 555-1234</h2></span><br><br>
                 <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
 
             </div>
