add glyphicon to to contact info

--- a/index.html
+++ b/index.html
@@ -164,11 +164,13 @@
             </div>
 
             <div id="contact info" class="container">
-              <h2>Contact:
+              <h2> 
+          <span class="glyphicon glyphicon-info-sign"></span> Contact:
               <p>We’d love to hear from you</p>
-              <h2>Address:<p> 
+              <h2> 
+          <span class="glyphicon glyphicon-pushpin"></span>Address:<p> 
               SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p>
-              <h2><span class="glyphicon glyphicon-earphone">Phone: <h2>(555) 555-1234</h2></span><br><br>
+              <h2><span class="glyphicon glyphicon-earphone"></span>Phone: <h2>(555) 555-1234</h2><br><br>
                 <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
 
             </div>
