add css to titles

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   </nav>
 
   <div class="title" id="pageopen">
-    <h1>Skydance Hot Air Balloon Rides</h1>
-    <h3>Ride with the wind. Dance with the sky.</h3>
+    <h1 id="colored"> Skydance Hot Air Balloon Rides  </h1>
+    <h3 id="colored-2">Ride with the wind. Dance with the sky.</h3>
   </div>
 
   <div class='container'>
@@ -140,7 +140,7 @@
             <div class="test">
               <div id="Testimonials">
                 <h2>Testimonials: Just a few of our happy customers</h2>
-                <blockquote>
+                <strong><blockquote>
                   <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
                 </blockquote>
                 <blockquote>
@@ -157,7 +157,7 @@
                 </blockquote>
                 <blockquote>
                   <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
-                </blockquote>
+                </blockquote></strong>
 
               </div>
               <br> 
@@ -170,8 +170,8 @@
               <h2> 
           <span class="glyphicon glyphicon-pushpin"></span>Address:<p> 
               SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p>
-              <h2><span class="glyphicon glyphicon-earphone"></span>Phone: <h2>(555) 555-1234</h2><br><br>
-                <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
+              <h2><span class="glyphicon glyphicon-earphone"></span>Phone: <h2>(555) 555-1234</h2>
+                <br><br> <h2>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
 
             </div>
 
